--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -66,11 +66,11 @@
     right: 3rem;
     padding: .25rem .5rem;
     border-radius: 8px;
-    background: #000000;
-    background-image: linear-gradient(
+    background: rgb(102, 77, 68);
+    background: linear-gradient(
       to right,
-      #434343,
-      #000000
+      orangered,
+      black,
     );
     z-index: 10;
 }
