--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
     position: relative;
     z-index: 0;
 }
+
+.app__stars-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+}
